--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,10 +5,10 @@
   url: /me
 
 - title: contact
-  url: mailto:micahcowell99@gmail.com
+  url: mailto:k@homb.it
 
 - title: github
-  url: https://github.com/getmicah
+  url: https://github.com/eliseys
 
 - title: twitter
-  url: https://twitter.com/getmicah
+  url: https://twitter.com/Ka_Dmitry
