--- a/_data/websites.yml
+++ b/_data/websites.yml
@@ -1,8 +1,8 @@
-- name: Gif-Giving
-  url: http://gif-giving.com
+- name: Flickr Photos
+  url: https://www.flickr.com/photos/dmitry_kolesnikov/
 
-- name: Sheri Koetting
-  url: http://sherikoetting.com
+- name:
+  url:
 
-- name: GetPeppers
-  url: http://getpeppers.com
+- name:
+  url:
