--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,3 +12,6 @@
 
 - title: twitter
   url: https://twitter.com/Ka_Dmitry
+  
+- title: flickr
+  url: https://www.flickr.com/photos/dmitry_kolesnikov/
