--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # My variables
-name: Dmitry Kolesnikov
-description: Проверка шрифта
+name: Дима Колесников
+description: 
 google_verification: null
 
 
