--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,20 +1,29 @@
-- title: home
+- title: Home
   url: /
 
-- title: about
+- title: About
   url: /me
 
-- title: contact
+- title: Contact
   url: mailto:k@homb.it
 
-- title: github
+- title: Github
   url: https://github.com/eliseys
 
-- title: twitter
+- title: Twitter
   url: https://twitter.com/Ka_Dmitry
   
-- title: flickr
+- title: Flickr
   url: https://www.flickr.com/photos/dmitry_kolesnikov/
 
 - title: MESA
   url: /mesa
+
+- title: Instagram
+  url: https://www.instagram.com/wunwud/
+  
+- title: Facebook
+  url: https://www.facebook.com/dmitriy.kolesnikov.1
+  
+- title: VK
+  url: https://vk.com/id9383842
