--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,5 +10,5 @@
 - title: Facebook
   url: https://www.facebook.com/dmitriy.kolesnikov.1
   
-- title: Вконтакте
+- title: VK
   url: https://vk.com/id9383842
