--- a/_data/websites.yml
+++ b/_data/websites.yml
@@ -1,8 +1,8 @@
-- name:
-  url:
+- name: Сергей Лисаков
+  url: https://lisakov.com/
 
-- name:
-  url:
+- name: Константин Маланчев
+  url: https://homb.it/
 
 - name:
   url:
