wedding page added

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,14 +1,14 @@
 - title: About
   url: /me
 
-- title: Flickr
-  url: https://www.flickr.com/photos/dmitry_kolesnikov/
+#- title: Flickr
+#  url: https://www.flickr.com/photos/dmitry_kolesnikov/
 
 #- title: MESA
 #  url: /mesa
 
-- title: Facebook
-  url: https://www.facebook.com/dmitriy.kolesnikov.1
+#- title: Facebook
+#  url: https://www.facebook.com/dmitriy.kolesnikov.1
   
-- title: VK
-  url: https://vk.com/id9383842
+#- title: VK
+#  url: https://vk.com/id9383842
