unknown liquid tag fixed

--- a/_config.yml
+++ b/_config.yml
@@ -25,3 +25,17 @@ highlighter: rouge
 google:
   tag_manager:
     container_id: GTM-TBR83JH
+
+plugins:
+  - jekyll-redirect-from
+  - jekyll-sitemap
+  - jekyll-feed
+  - jekyll-feed
+  - jekyll-redirect-from
+  - jekyll-seo-tag
+  - jekyll-sitemap
+  - jekyll-avatar
+  - jemoji
+  - jekyll-mentions
+  - jekyll-include-cache
+
