remove about section

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,5 @@
-- title: About
-  url: /me
+#- title: About
+#  url: /me
 
 #- title: Flickr
 #  url: https://www.flickr.com/photos/dmitry_kolesnikov/
